# Transformer_Pytorch

./: .gitignore  .python-version  DATASET_MIGRATION.md  DATASET_SELECTION.md  README.md  config.py  dataset.py  dl_data.py  filter_medical_data.py  finetune.py  infer.py  inference.py  inference_vi2en.py  load_data.py  lr_scheduler.py  preprocess_local_data.py  pyproject.toml  quick_start.py  test.py  test_dataset.py  test_dataset_selection.py  test_preprocessing.py  test_sacrebleu.py  train.py  train_vi2en.py
models/: attention.py  decoder.py  embedding.py  encoder.py  transformer.py
