[project]
name = "transformer-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "kagglehub>=0.3.13",
    "keras>=3.12.0",
    "nltk>=3.9.2",
    "pyvi>=0.1.1",
    "sacrebleu>=2.5.1",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
